--- a/ko/app/PrivacyPolicy/index.html
+++ b/ko/app/PrivacyPolicy/index.html
@@ -12,12 +12,6 @@
   <link href="/css/sub.css" rel="stylesheet" type="text/css"/>
   <link href="/css/mediaquery.css" rel="stylesheet" type="text/css"/>
   <link href="/css/sub_mediaquery.css" rel="stylesheet" type="text/css"/>
-
-  <script src="/js/drprivacy/jquery-1.7.1.min.js"></script>
-  <script src="/js/drprivacy/jquery-ui.min.js"></script>
-  <script src="/js/searchDtPop.js"></script>
-  <script src="/js/common.js"></script>
-  <script src="/js/ui.js"></script>
 </head>
 <body>
   <p class="ls2 lh6 bs5 ts4"><em class="emphasis">< Nuy >('https://thenuy.github.io/ko/App/'이하 'NuyHOME')</em>은(는) <b>「개인정보 보호법」</b> 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</p>
@@ -47,7 +41,7 @@
   </ul><br><br>
     
     
-  <p class='lh6 bs4'><strong>제4조(개인정보처리의 위탁에 관한 사항)</strong><br><br> ① <em class="emphasis">< Nuy ></em>은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.</p>
+  <p class='lh6 bs4'><strong>제4조(개인정보처리의 위탁에 관한 사항)</strong><br><br><em class="emphasis"> ① < Nuy ></em>은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.</p>
   <ul class='list_indent2 mgt10'>
     <li>위탁받는 자 (수탁자) : Nuy</li>
     <li>위탁하는 업무의 내용 : 구매 및 요금 결제, 물품배송 또는 청구서 등 발송, 본인인증(금융거래, 금융서비스), 회원제 서비스 이용에 따른 본인확인, 불만처리 등 민원처리, 고지사항 전달, 신규 서비스(제품) 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공</li>
@@ -176,4 +170,11 @@
   <p class='sub_p'></p>
   <p class='sub_p'>예시 ) - 20XX. X. X ~ 20XX. X. X 적용   (클릭) </p>
 </body>
+<footer>
+  <script src="/js/drprivacy/jquery-1.7.1.min.js"></script>
+  <script src="/js/drprivacy/jquery-ui.min.js"></script>
+  <script src="/js/searchDtPop.js"></script>
+  <script src="/js/common.js"></script>
+  <script src="/js/ui.js"></script>
+</footer>
 </html>
