--- a/ko/app/PrivacyPolicy/index.html
+++ b/ko/app/PrivacyPolicy/index.html
@@ -32,7 +32,7 @@
   <p class="ls2"><br><br></p><br><br>
   
   
-  <p class='lh6 bs4'><strong>제3조(개인정보의 제3자 제공에 관한 사항)</strong><br><br> ① <em class="emphasis">< Nuy >은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.</p>
+  <p class='lh6 bs4'><strong>제3조(개인정보의 제3자 제공에 관한 사항)</strong><br><br><em class="emphasis"> ① < Nuy ></em>은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.</p>
   <p class="sub_p mgt10"> ② <span class="colorLightBlue">< Nuy ></span>은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.</p>
   <ul class="list_indent2 mgt10">
     <li>개인정보를 제공받는 자 : Nuy</li>
