--- a/ko/app/PrivacyPolicy/index.html
+++ b/ko/app/PrivacyPolicy/index.html
@@ -51,7 +51,7 @@
   <p class='sub_p mgt10'>③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.</p><br><br>
     
     
-  <p class='lh6 bs4'><strong>제5조(개인정보의 파기절차 및 파기방법)<em class="emphasis"></strong></p>
+  <p class='lh6 bs4'><strong>제5조(개인정보의 파기절차 및 파기방법)</strong></p>
   <p class='ls2'><br>① < Nuy > 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.<br><br>② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.<br>1. 법령 근거 :</br>2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜<br><br>③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.<br>1. 파기절차<br> < Nuy > 은(는) 파기 사유가 발생한 개인정보를 선정하고, < Nuy > 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.<br></p>
   <p class='sub_p mgt10'>2. 파기방법</p>
   <p class='sub_p'>종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.<br>전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다</p><br><br>
