--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -10,7 +10,8 @@
   <p><em>< Nuy >('https://thenuy.github.io/ko/App/checkyo)</em>은(는) <b>「개인정보 보호법」</b> 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</p><br>
 
 
-  <p><strong>제1조(개인정보의 처리목적)<br><br>< Nuy >(이)가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.</strong></p><br><br>
+  <p><strong>제1조(개인정보의 처리목적)</strong><br></p>
+  <p> < Nuy >(이)가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.</p><br>
   <ul>
     <li><b style="font-family:'Lucida Console', monospace">개인정보 파일명 : 없음.</b></li>
     <li>개인정보의 처리목적 : 없음.</li>
