--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -10,8 +10,8 @@
   <p><em>< Nuy >('https://thenuy.github.io/ko/App/checkyo)</em>은(는) <b>「개인정보 보호법」</b> 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</p><br>
 
 
-  <p><strong>제1조(개인정보의 처리목적)</strong><br></p>
-  <p> < Nuy >(이)가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.</p><br>
+  <p><strong>제1조(개인정보의 처리목적)</strong></p>
+  <p><i> < Nuy >(이)가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.</i></p>
   <ul>
     <li><b style="font-family:'Lucida Console', monospace">개인정보 파일명 : 없음.</b></li>
     <li>개인정보의 처리목적 : 없음.</li>
@@ -26,7 +26,7 @@
 
 
   <p><strong>제3조(개인정보의 제3자 제공에 관한 사항)</strong></p>
-  <p> ① <em>< Nuy ></em>은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.<br> ② <span>< Nuy ></span>은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.</p>
+  <p> ① <em>< Nuy ></em>은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.<br> ② <em>< Nuy ></em>은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.</p>
   <ul>
     <li>개인정보를 제공받는 자 : 없음.</li>
     <li>제공받는 자의 개인정보 이용목적 : 없음.</li>
@@ -40,8 +40,8 @@
     <li>위탁받는 자 (수탁자) : 없음.</li>
     <li>위탁하는 업무의 내용 : 없음.</li>
     <li>위탁기간 : 법적인 목적 상실 시 순차적으로 파기</li>
-  </ul><br><br>
-  <p> ② <span>< Nuy ></span>은(는) 위탁계약 체결시 「개인정보 보호법」 제26조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁을 제한하고 있습니다.</p>
+  </ul>
+  <p> ② <em>< Nuy ></em>은(는) 위탁계약 체결시 「개인정보 보호법」 제26조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁을 제한하고 있습니다.</p>
   <p> ③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.</p><br><br>
 
 
@@ -68,7 +68,8 @@
   <p> ⑥ Nuy은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.</p><br><br>
 
 
-  <p><strong>제7조(개인정보의 안전성 확보조치에 관한 사항)<br><br><em>< Nuy ></em>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</strong></p><br><br>
+  <p><strong>제7조(개인정보의 안전성 확보조치에 관한 사항)</strong></p>
+  <p><em>< Nuy ></em><i>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</i></p>
   <ul>
     <ol>내부관리계획의 수립 및 시행<br> 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.</ol>
     <ol>개인정보 취급 직원의 최소화 및 교육<br> 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.</ol>
@@ -106,7 +107,7 @@
 
 
   <p><strong>제10조 (개인정보 보호책임자에 관한 사항) </strong></p>
-  <p>  ① <span>Nuy</span> 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.</p>
+  <p> ① <span>Nuy</span> 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.</p>
   <ul>
     <li style="font-family:'Lucida Console', monospace">▶ 개인정보 보호책임자 </li>
     <li>성명 :김윤</li>
@@ -126,7 +127,8 @@
   <p> ② 정보주체께서는 Nuy 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. Nuy 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.</p><br><br>
 
 
-  <p><strong>제11조(개인정보의 열람청구를 접수·처리하는 부서)<br>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.<br><span>< Nuy ></span>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</strong></p>
+  <p><strong>제11조(개인정보의 열람청구를 접수·처리하는 부서)</strong></p>
+  <p><i>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.</i><br><em>< Nuy ></em><i>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</i></p>
   <ul>
     <li style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </li>
     <li>부서명 : Nuy</li>
@@ -137,7 +139,7 @@
 
 
   <p><strong>제12조(정보주체의 권익침해에 대한 구제방법)</strong></p>
-  <p>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.</p><br>
+  <p><i>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.<i></p>
   <ul>
     <ol>개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)</ol>
     <ol>개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)</ol>
