--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -49,15 +49,15 @@
   <p><strong>제5조(개인정보의 파기절차 및 파기방법)</strong></p>
   <p> ① < Nuy > 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.</p>
   <p> ② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.</p>
-  <ul>
-    <ol>법령 근거 : 없음.</ol>
-    <ol>보존하는 개인정보 항목 : 없음.</ol>
-  </ul>
+  <ol>
+    <li>법령 근거 : 없음.</li>
+    <li>보존하는 개인정보 항목 : 없음.</li>
+  </ol>
   <p> ③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.</p>
-  <ul>
-    <ol>파기절차<br> < Nuy > 은(는) 파기 사유가 발생한 개인정보를 선정하고, < Nuy > 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.</ol>
-    <ol>파기방법<br>종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.<br>전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.</ol>
-  </ul><br><br>
+  <ol>
+    <li>파기절차<br> < Nuy > 은(는) 파기 사유가 발생한 개인정보를 선정하고, < Nuy > 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.</li>
+    <li>파기방법<br>종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.<br>전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.</li>
+  </ol><br><br>
 
 
   <p><strong>제6조(정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항)</strong></p>
@@ -71,15 +71,15 @@
 
   <p><strong>제7조(개인정보의 안전성 확보조치에 관한 사항)</strong></p>
   <p><em>< Nuy ></em><i>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</i></p>
-  <ul>
-    <ol>내부관리계획의 수립 및 시행<br> 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.</ol>
-    <ol>개인정보 취급 직원의 최소화 및 교육<br> 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.</ol>
-    <ol>개인정보에 대한 접근 제한<br> 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.</ol>
-    <ol>접속기록의 보관 및 위변조 방지<br> 개인정보처리시스템에 접속한 기록을 최소 1년 이상 보관, 관리하고 있으며,다만, 5만명 이상의 정보주체에 관하여 개인정보를 추가하거나, 고유식별정보 또는 민감정보를 처리하는 경우에는 2년이상 보관, 관리하고 있습니다.<br>또한, 접속기록이 위변조 및 도난, 분실되지 않도록 보안기능을 사용하고 있습니다.</ol>
-    <ol>개인정보의 암호화<br> 이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.</ol>
-    <ol>해킹 등에 대비한 기술적 대책<br> <em>Nuy</em>은(는) 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.</ol>
-    <ol>비인가자에 대한 출입 통제<br> 개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.</ol>
-  </ul><br><br>
+  <ol>
+    <li>내부관리계획의 수립 및 시행<br> 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.</li>
+    <li>개인정보 취급 직원의 최소화 및 교육<br> 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.</li>
+    <li>개인정보에 대한 접근 제한<br> 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.</li>
+    <li>접속기록의 보관 및 위변조 방지<br> 개인정보처리시스템에 접속한 기록을 최소 1년 이상 보관, 관리하고 있으며,다만, 5만명 이상의 정보주체에 관하여 개인정보를 추가하거나, 고유식별정보 또는 민감정보를 처리하는 경우에는 2년이상 보관, 관리하고 있습니다.<br>또한, 접속기록이 위변조 및 도난, 분실되지 않도록 보안기능을 사용하고 있습니다.</li>
+    <li>개인정보의 암호화<br> 이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.</li>
+    <li>해킹 등에 대비한 기술적 대책<br> <em>Nuy</em>은(는) 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.</li>
+    <li>비인가자에 대한 출입 통제<br> 개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.</li>
+  </ol><br><br>
 
 
   <p><strong>제8조(개인정보를 자동으로 수집하는 장치의 설치·운영 및 그 거부에 관한 사항)</strong></p>
@@ -141,34 +141,38 @@
 
   <p><strong>제12조(정보주체의 권익침해에 대한 구제방법)</strong></p>
   <p><i>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.<i></p>
-  <ul>
-    <ol>개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)</ol>
-    <ol>개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)</ol>
-    <ol>대검찰청 : (국번없이) 1301 (www.spo.go.kr)</ol>
-    <ol>경찰청 : (국번없이) 182 (ecrm.cyber.go.kr)</ol>
-  </ul><br>
+  <ol>
+    <li>개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)</li>
+    <li>개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)</li>
+    <li>대검찰청 : (국번없이) 1301 (www.spo.go.kr)</li>
+    <li>경찰청 : (국번없이) 182 (ecrm.cyber.go.kr)</li>
+  </ol><br>
   <p>「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.</p><br>
   <p>※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다.</p><br><br>
 
 
   <p><strong>제13조(영상정보처리기기 운영·관리에 관한 사항)<br> ① < Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다.</strong></p>
-  <ul>
-    <ol>영상정보처리기기 설치근거·목적 : <span>< Nuy ></span> 의</ol>
-    <ol>설치 대수, 설치 위치, 촬영 범위 :
-      <li>설치대수 : 0 대</li>
-      <li>설치위치 : 없음.</li>
-      <li>촬영범위 : 없음.</li>
-    </ol>
-    <ol>관리책임자, 담당부서 및 영상정보에 대한 접근권한자 : 없음.</ol>
-    <ol>영상정보 촬영시간, 보관기간, 보관장소, 처리방법
-      <li>촬영시간 : 0 시간</li>
-      <li>보관기간 : 촬영시부터 법적 목적 상실 시 순차적으로 파기</li>
-      <li>보관장소 및 처리방법 : 없음.</li>
-    </ol>
-    <ol>영상정보 확인 방법 및 장소 :  없음.</ol>
-    <ol>정보주체의 영상정보 열람등요구에 대한 조치 : 개인영상정보 열람.존재확인 청구서로 신청하여야 하며, 정보주체 자신이 촬영된 경우 또는 명백히 정보주체의 생명.신체.재산 이익을 위해 필요한 경우에 한해 열람을 허용함.</ol>
-    <ol>영상정보처리기기 설치근거·목적 : 없음.</ol>
-  </ul><br><br>
+  <ol>
+    <li>영상정보처리기기 설치근거·목적 : <span>< Nuy ></span> 의</li>
+    <li>설치 대수, 설치 위치, 촬영 범위 :
+      <ul>
+        <li>설치대수 : 0 대</li>
+        <li>설치위치 : 없음.</li>
+        <li>촬영범위 : 없음.</li>
+      </ul>
+    </li>
+    <li>관리책임자, 담당부서 및 영상정보에 대한 접근권한자 : 없음.</li>
+    <li>영상정보 촬영시간, 보관기간, 보관장소, 처리방법
+      <ul>
+        <li>촬영시간 : 0 시간</li>
+        <li>보관기간 : 촬영시부터 법적 목적 상실 시 순차적으로 파기</li>
+        <li>보관장소 및 처리방법 : 없음.</li>
+      </ul>
+    </li>
+    <li>영상정보 확인 방법 및 장소 :  없음.</li>
+    <li>정보주체의 영상정보 열람등요구에 대한 조치 : 개인영상정보 열람.존재확인 청구서로 신청하여야 하며, 정보주체 자신이 촬영된 경우 또는 명백히 정보주체의 생명.신체.재산 이익을 위해 필요한 경우에 한해 열람을 허용함.</li>
+    <li>영상정보처리기기 설치근거·목적 : 없음.</li>
+  </ol><br><br>
 
 
   <p><strong>제14조(개인정보 처리방침 변경)</strong></p>
