--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -49,15 +49,15 @@
   <p><strong>제5조(개인정보의 파기절차 및 파기방법)</strong></p>
   <p> ① < Nuy > 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.</p>
   <p> ② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.</p>
-  <ol>
+  <ul>
     <li>법령 근거 : 없음.</li>
     <li>보존하는 개인정보 항목 : 없음.</li>
-  </ol>
+  </ul>
   <p> ③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.</p>
-  <ol>
+  <ul>
     <li>파기절차<br> < Nuy > 은(는) 파기 사유가 발생한 개인정보를 선정하고, < Nuy > 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.</li>
     <li>파기방법<br>종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.<br>전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.</li>
-  </ol><br><br>
+  </ul><br><br>
 
 
   <p><strong>제6조(정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항)</strong></p>
@@ -146,12 +146,13 @@
     <li>개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)</li>
     <li>대검찰청 : (국번없이) 1301 (www.spo.go.kr)</li>
     <li>경찰청 : (국번없이) 182 (ecrm.cyber.go.kr)</li>
-  </ol><br>
-  <p>「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.</p><br>
+  </ol>
+  <p>「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.</p>
   <p>※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다.</p><br><br>
 
 
-  <p><strong>제13조(영상정보처리기기 운영·관리에 관한 사항)<br> ① < Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다.</strong></p>
+  <p><strong>제13조(영상정보처리기기 운영·관리에 관한 사항)</strong></p>
+  <p><i>< Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다.</i></p>
   <ol>
     <li>영상정보처리기기 설치근거·목적 : <span>< Nuy ></span> 의</li>
     <li>설치 대수, 설치 위치, 촬영 범위 :
