--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -11,7 +11,7 @@
 
 
   <p><strong>제1조(개인정보의 처리목적)</strong></p>
-  <p><i> < Nuy >(이)가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.</i></p>
+  <p> < Nuy >(이)가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.</p>
   <ul>
     <li><b style="font-family:'Lucida Console', monospace">개인정보 파일명 : 없음.</b></li>
     <li>개인정보의 처리목적 : 없음.</li>
@@ -70,7 +70,7 @@
 
 
   <p><strong>제7조(개인정보의 안전성 확보조치에 관한 사항)</strong></p>
-  <p><em>< Nuy ></em><i>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</i></p>
+  <p><em>< Nuy ></em>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</p>
   <ol>
     <li>내부관리계획의 수립 및 시행<br> 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.</li>
     <li>개인정보 취급 직원의 최소화 및 교육<br> 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.</li>
@@ -85,7 +85,7 @@
   <p><strong>제8조(개인정보를 자동으로 수집하는 장치의 설치·운영 및 그 거부에 관한 사항)</strong></p>
   <p> ① Nuy 은(는) 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다.</p>
   <p> ② 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합니다.</p>
-  <ul>
+  <ul style="list-style-type: none;">
     <li>가. 쿠키의 사용 목적 : 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다.</li>
     <li>나. 쿠키의 설치•운영 및 거부 : 웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다.</li>
     <li>다. 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.</li>
@@ -110,7 +110,7 @@
   <p><strong>제10조 (개인정보 보호책임자에 관한 사항) </strong></p>
   <p> ① <span>Nuy</span> 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.</p>
   <ul>
-    <li style="font-family:'Lucida Console', monospace">▶ 개인정보 보호책임자 </li>
+    <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호책임자 </p>
     <li>성명 :김윤</li>
     <li>직책 :사업주</li>
     <li>직급 :사업주</li>
@@ -119,7 +119,7 @@
   </ul>
   <p>※ 개인정보 보호 담당부서로 연결됩니다.</p>
   <ul>
-    <li style="font-family:'Lucida Console', monospace">▶ 개인정보 보호 담당부서</li>
+    <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호 담당부서</p>
     <li>부서명 :Nuy</li>
     <li>담당자 :김윤</li>
     <li>HP : 010-6542-7774</li>
@@ -131,7 +131,7 @@
   <p><strong>제11조(개인정보의 열람청구를 접수·처리하는 부서)</strong></p>
   <p><i>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.</i><br><em>< Nuy ></em><i>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</i></p>
   <ul>
-    <li style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </li>
+    <p style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </p>
     <li>부서명 : Nuy</li>
     <li>담당자 : 김윤</li>
     <li>HP : 010-6542-7774</li>
@@ -156,7 +156,7 @@
   <ol>
     <li>영상정보처리기기 설치근거·목적 : <span>< Nuy ></span> 의</li>
     <li>설치 대수, 설치 위치, 촬영 범위 :
-      <ul>
+      <ul style= "padding-inline-start: 1.5em;">
         <li>설치대수 : 0 대</li>
         <li>설치위치 : 없음.</li>
         <li>촬영범위 : 없음.</li>
