--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -109,8 +109,8 @@
 
   <p><strong>제10조 (개인정보 보호책임자에 관한 사항) </strong></p>
   <p> ① <span>Nuy</span> 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.</p>
+  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호책임자 </p>
   <ul>
-    <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호책임자 </p>
     <li>성명 :김윤</li>
     <li>직책 :사업주</li>
     <li>직급 :사업주</li>
@@ -118,8 +118,8 @@
     <li>e-mail : gpcdeveloper@gmail.com</li>
   </ul>
   <p>※ 개인정보 보호 담당부서로 연결됩니다.</p>
+  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호 담당부서</p>
   <ul>
-    <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호 담당부서</p>
     <li>부서명 :Nuy</li>
     <li>담당자 :김윤</li>
     <li>HP : 010-6542-7774</li>
@@ -129,9 +129,9 @@
 
 
   <p><strong>제11조(개인정보의 열람청구를 접수·처리하는 부서)</strong></p>
-  <p><i>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.</i><br><em>< Nuy ></em><i>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</i></p>
+  <p>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.</i><br><em>< Nuy ></em><i>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</p>
+  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </p>
   <ul>
-    <p style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </p>
     <li>부서명 : Nuy</li>
     <li>담당자 : 김윤</li>
     <li>HP : 010-6542-7774</li>
@@ -140,7 +140,7 @@
 
 
   <p><strong>제12조(정보주체의 권익침해에 대한 구제방법)</strong></p>
-  <p><i>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.<i></p>
+  <p>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.</p>
   <ol>
     <li>개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)</li>
     <li>개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)</li>
@@ -152,11 +152,11 @@
 
 
   <p><strong>제13조(영상정보처리기기 운영·관리에 관한 사항)</strong></p>
-  <p><i>< Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다.</i></p>
+  <p>< Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다./p>
   <ol>
     <li>영상정보처리기기 설치근거·목적 : <span>< Nuy ></span> 의</li>
     <li>설치 대수, 설치 위치, 촬영 범위 :
-      <ul style= "padding-inline-start: 1.5em;">
+      <ul style= "list-style-type: none, padding-inline-start: 1em;">
         <li>설치대수 : 0 대</li>
         <li>설치위치 : 없음.</li>
         <li>촬영범위 : 없음.</li>
@@ -164,7 +164,7 @@
     </li>
     <li>관리책임자, 담당부서 및 영상정보에 대한 접근권한자 : 없음.</li>
     <li>영상정보 촬영시간, 보관기간, 보관장소, 처리방법
-      <ul>
+      <ul style= "list-style-type: none, padding-inline-start: 1em;">
         <li>촬영시간 : 0 시간</li>
         <li>보관기간 : 촬영시부터 법적 목적 상실 시 순차적으로 파기</li>
         <li>보관장소 및 처리방법 : 없음.</li>
