--- a/ko/app/PrivacyPolicy/index.html
+++ b/ko/app/PrivacyPolicy/index.html
@@ -11,7 +11,7 @@
 
 
   <p><strong>제1조(개인정보의 처리목적)</strong></p>
-  <p><i> < Nuy >(이)가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.</i></p>
+  <p> < Nuy >(이)가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.</p>
   <ul>
     <li><b style="font-family:'Lucida Console', monospace">개인정보 파일명 : 없음.</b></li>
     <li>개인정보의 처리목적 : 없음.</li>
@@ -49,15 +49,15 @@
   <p><strong>제5조(개인정보의 파기절차 및 파기방법)</strong></p>
   <p> ① < Nuy > 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.</p>
   <p> ② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.</p>
-  <ol>
+  <ul>
     <li>법령 근거 : 없음.</li>
     <li>보존하는 개인정보 항목 : 없음.</li>
-  </ol>
+  </ul>
   <p> ③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.</p>
-  <ol>
+  <ul>
     <li>파기절차<br> < Nuy > 은(는) 파기 사유가 발생한 개인정보를 선정하고, < Nuy > 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.</li>
     <li>파기방법<br>종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.<br>전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.</li>
-  </ol><br><br>
+  </ul><br><br>
 
 
   <p><strong>제6조(정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항)</strong></p>
@@ -70,7 +70,7 @@
 
 
   <p><strong>제7조(개인정보의 안전성 확보조치에 관한 사항)</strong></p>
-  <p><em>< Nuy ></em><i>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</i></p>
+  <p><em>< Nuy ></em>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</p>
   <ol>
     <li>내부관리계획의 수립 및 시행<br> 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.</li>
     <li>개인정보 취급 직원의 최소화 및 교육<br> 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.</li>
@@ -85,7 +85,7 @@
   <p><strong>제8조(개인정보를 자동으로 수집하는 장치의 설치·운영 및 그 거부에 관한 사항)</strong></p>
   <p> ① Nuy 은(는) 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다.</p>
   <p> ② 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합니다.</p>
-  <ul>
+  <ul style="list-style-type: none;">
     <li>가. 쿠키의 사용 목적 : 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다.</li>
     <li>나. 쿠키의 설치•운영 및 거부 : 웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다.</li>
     <li>다. 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.</li>
@@ -109,8 +109,8 @@
 
   <p><strong>제10조 (개인정보 보호책임자에 관한 사항) </strong></p>
   <p> ① <span>Nuy</span> 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.</p>
+  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호책임자 </p>
   <ul>
-    <li style="font-family:'Lucida Console', monospace">▶ 개인정보 보호책임자 </li>
     <li>성명 :김윤</li>
     <li>직책 :사업주</li>
     <li>직급 :사업주</li>
@@ -118,8 +118,8 @@
     <li>e-mail : gpcdeveloper@gmail.com</li>
   </ul>
   <p>※ 개인정보 보호 담당부서로 연결됩니다.</p>
+  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호 담당부서</p>
   <ul>
-    <li style="font-family:'Lucida Console', monospace">▶ 개인정보 보호 담당부서</li>
     <li>부서명 :Nuy</li>
     <li>담당자 :김윤</li>
     <li>HP : 010-6542-7774</li>
@@ -129,9 +129,9 @@
 
 
   <p><strong>제11조(개인정보의 열람청구를 접수·처리하는 부서)</strong></p>
-  <p><i>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.</i><br><em>< Nuy ></em><i>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</i></p>
+  <p>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.</i><br><em>< Nuy ></em><i>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</p>
+  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </p>
   <ul>
-    <li style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </li>
     <li>부서명 : Nuy</li>
     <li>담당자 : 김윤</li>
     <li>HP : 010-6542-7774</li>
@@ -140,22 +140,23 @@
 
 
   <p><strong>제12조(정보주체의 권익침해에 대한 구제방법)</strong></p>
-  <p><i>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.<i></p>
+  <p>정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.</p>
   <ol>
     <li>개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)</li>
     <li>개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)</li>
     <li>대검찰청 : (국번없이) 1301 (www.spo.go.kr)</li>
     <li>경찰청 : (국번없이) 182 (ecrm.cyber.go.kr)</li>
-  </ol><br>
-  <p>「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.</p><br>
+  </ol>
+  <p>「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.</p>
   <p>※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다.</p><br><br>
 
 
-  <p><strong>제13조(영상정보처리기기 운영·관리에 관한 사항)<br> ① < Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다.</strong></p>
+  <p><strong>제13조(영상정보처리기기 운영·관리에 관한 사항)</strong></p>
+  <p>< Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다./p>
   <ol>
     <li>영상정보처리기기 설치근거·목적 : <span>< Nuy ></span> 의</li>
     <li>설치 대수, 설치 위치, 촬영 범위 :
-      <ul>
+      <ul style= "list-style-type: none, padding-inline-start: 1em;">
         <li>설치대수 : 0 대</li>
         <li>설치위치 : 없음.</li>
         <li>촬영범위 : 없음.</li>
@@ -163,7 +164,7 @@
     </li>
     <li>관리책임자, 담당부서 및 영상정보에 대한 접근권한자 : 없음.</li>
     <li>영상정보 촬영시간, 보관기간, 보관장소, 처리방법
-      <ul>
+      <ul style= "list-style-type: none, padding-inline-start: 1em;">
         <li>촬영시간 : 0 시간</li>
         <li>보관기간 : 촬영시부터 법적 목적 상실 시 순차적으로 파기</li>
         <li>보관장소 및 처리방법 : 없음.</li>
