--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -152,7 +152,7 @@
 
 
   <p><strong>제13조(영상정보처리기기 운영·관리에 관한 사항)</strong></p>
-  <p>< Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다./p>
+  <p>< Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다.</p>
   <ol>
     <li>영상정보처리기기 설치근거·목적 : <span>< Nuy ></span> 의</li>
     <li>설치 대수, 설치 위치, 촬영 범위 :
