--- a/ko/app/PrivacyPolicy/index.html
+++ b/ko/app/PrivacyPolicy/index.html
@@ -129,7 +129,7 @@
 
 
   <p><strong>제11조(개인정보의 열람청구를 접수·처리하는 부서)</strong></p>
-  <p>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.<br><em>< Nuy ></em><i>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</p>
+  <p>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.<br><em>< Nuy ></em>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</p>
   <p style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </p>
   <ul>
     <li>부서명 : Nuy</li>
