--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -70,16 +70,7 @@
 
 
   <p><strong>제7조(개인정보의 안전성 확보조치에 관한 사항)</strong></p>
-  <p><em>< Nuy ></em>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</p>
-  <ol>
-    <li>내부관리계획의 수립 및 시행<br> 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.</li>
-    <li>개인정보 취급 직원의 최소화 및 교육<br> 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.</li>
-    <li>개인정보에 대한 접근 제한<br> 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.</li>
-    <li>접속기록의 보관 및 위변조 방지<br> 개인정보처리시스템에 접속한 기록을 최소 1년 이상 보관, 관리하고 있으며,다만, 5만명 이상의 정보주체에 관하여 개인정보를 추가하거나, 고유식별정보 또는 민감정보를 처리하는 경우에는 2년이상 보관, 관리하고 있습니다.<br>또한, 접속기록이 위변조 및 도난, 분실되지 않도록 보안기능을 사용하고 있습니다.</li>
-    <li>개인정보의 암호화<br> 이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.</li>
-    <li>해킹 등에 대비한 기술적 대책<br> <em>Nuy</em>은(는) 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.</li>
-    <li>비인가자에 대한 출입 통제<br> 개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.</li>
-  </ol><br><br>
+  <p><em>< Nuy ></em>은(는) 개인정보를 확보를 하지 않습니다.</p><br><br>
 
 
   <p><strong>제8조(개인정보를 자동으로 수집하는 장치의 설치·운영 및 그 거부에 관한 사항)</strong></p>
@@ -97,10 +88,6 @@
   <p>- 없음. </p>
   <p>▶ 가명정보의 처리 및 보유기간</p>
   <p>- 없음. </p>
-  <p>▶ 가명정보의 제3자 제공에 관한 사항(해당되는 경우에만 작성)</p>
-  <p>- 없음. </p>
-  <p>▶ 가명정보 처리의 위탁에 관한 사항(해당되는 경우에만 작성)</p>
-  <p>- 없음. </p>
   <p>▶ 가명처리하는 개인정보의 항목</p>
   <p>- 없음. </p>
   <p>▶ 법 제28조의4(가명정보에 대한 안전조치 의무 등)에 따른 가명정보의 안전성 확보조치에 관한 사항</p>
@@ -108,35 +95,11 @@
 
 
   <p><strong>제10조 (개인정보 보호책임자에 관한 사항) </strong></p>
-  <p> ① <span>Nuy</span> 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.</p>
-  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호책임자 </p>
-  <ul>
-    <li>성명 :김윤</li>
-    <li>직책 :사업주</li>
-    <li>직급 :사업주</li>
-    <li>HP : 010-6542-7774</li>
-    <li>e-mail : gpcdeveloper@gmail.com</li>
-  </ul>
-  <p>※ 개인정보 보호 담당부서로 연결됩니다.</p>
-  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 보호 담당부서</p>
-  <ul>
-    <li>부서명 :Nuy</li>
-    <li>담당자 :김윤</li>
-    <li>HP : 010-6542-7774</li>
-    <li>e-mail : gpcdeveloper@gmail.com</li>
-  </ul>
-  <p> ② 정보주체께서는 Nuy 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. Nuy 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.</p><br><br>
+  <p> ① <span>Nuy</span> 은(는) 개인정보 처리에 관한 업무가 없습니다.</p><br><br>
 
 
   <p><strong>제11조(개인정보의 열람청구를 접수·처리하는 부서)</strong></p>
-  <p>정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.<br><em>< Nuy ></em>은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.</p>
-  <p style="font-family:'Lucida Console', monospace">▶ 개인정보 열람청구 접수·처리 부서 </p>
-  <ul>
-    <li>부서명 : Nuy</li>
-    <li>담당자 : 김윤</li>
-    <li>HP : 010-6542-7774</li>
-    <li>e-mail : gpcdeveloper@gmail.com</li>
-  </ul><br><br>
+  <p>보관중인 개인정보가 존재하지 않습니다.</p><br><br>
 
 
   <p><strong>제12조(정보주체의 권익침해에 대한 구제방법)</strong></p>
@@ -152,33 +115,12 @@
 
 
   <p><strong>제13조(영상정보처리기기 운영·관리에 관한 사항)</strong></p>
-  <p>< Nuy > 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다.</p>
-  <ol>
-    <li>영상정보처리기기 설치근거·목적 : <span>< Nuy ></span> 의</li>
-    <li>설치 대수, 설치 위치, 촬영 범위 :
-      <ul style= "list-style-type: none, padding-inline-start: 1em;">
-        <li>설치대수 : 0 대</li>
-        <li>설치위치 : 없음.</li>
-        <li>촬영범위 : 없음.</li>
-      </ul>
-    </li>
-    <li>관리책임자, 담당부서 및 영상정보에 대한 접근권한자 : 없음.</li>
-    <li>영상정보 촬영시간, 보관기간, 보관장소, 처리방법
-      <ul style= "list-style-type: none, padding-inline-start: 1em;">
-        <li>촬영시간 : 0 시간</li>
-        <li>보관기간 : 촬영시부터 법적 목적 상실 시 순차적으로 파기</li>
-        <li>보관장소 및 처리방법 : 없음.</li>
-      </ul>
-    </li>
-    <li>영상정보 확인 방법 및 장소 :  없음.</li>
-    <li>정보주체의 영상정보 열람등요구에 대한 조치 : 개인영상정보 열람.존재확인 청구서로 신청하여야 하며, 정보주체 자신이 촬영된 경우 또는 명백히 정보주체의 생명.신체.재산 이익을 위해 필요한 경우에 한해 열람을 허용함.</li>
-    <li>영상정보처리기기 설치근거·목적 : 없음.</li>
-  </ol><br><br>
+  <p>< Nuy > 은(는) 영상정보처리기기를 설치·운영하지 않습니다.</p><br><br>
 
 
   <p><strong>제14조(개인정보 처리방침 변경)</strong></p>
   <p> ① 이 개인정보처리방침은 2021년 3월 10부터 적용됩니다.</p>
   <p> ② 이전의 개인정보 처리방침은 아래에서 확인하실 수 있습니다.</p>
-  <p>예시 ) - 20XX. X. X ~ 20XX. X. X 적용   (클릭)</p>
+  <p> 변경사항이 없습니다. </p>
 </body>
 </html>
