--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -78,7 +78,8 @@
   <p> ② 앱 내의 정보는 이용자들의 개인 기기에 저장됩니다.</p><br><br>
 
 
-  <p><strong>제9조(가명정보를 처리하는 경우 가명정보 처리에 관한 사항)<br><br><em>< Nuy ></em>은(는) 다음과 같은 목적으로 가명정보를 처리하고 있습니다.</strong></p>
+  <p><strong>제9조(가명정보를 처리하는 경우 가명정보 처리에 관한 사항)</strong></p>
+  <p><em>< Nuy ></em>은(는) 다음과 같은 목적으로 가명정보를 처리하고 있습니다.</p>
   <p>▶ 가명정보의 처리 목적</p>
   <p>- 없음. </p>
   <p>▶ 가명정보의 처리 및 보유기간</p>
