--- a/ko/app/PrivacyPolicy/index.html
+++ b/ko/app/PrivacyPolicy/index.html
@@ -92,7 +92,8 @@
   </ul><br><br>
 
 
-  <p><strong>제9조(가명정보를 처리하는 경우 가명정보 처리에 관한 사항)<br><br><em>< Nuy ></em>은(는) 다음과 같은 목적으로 가명정보를 처리하고 있습니다.</strong></p>
+  <p><strong>제9조(가명정보를 처리하는 경우 가명정보 처리에 관한 사항)</strong></p>
+  <p><em>< Nuy ></em>은(는) 다음과 같은 목적으로 가명정보를 처리하고 있습니다.</p>
   <p>▶ 가명정보의 처리 목적</p>
   <p>- 없음. </p>
   <p>▶ 가명정보의 처리 및 보유기간</p>
