--- a/ko/app/checkyo/index.html
+++ b/ko/app/checkyo/index.html
@@ -70,7 +70,7 @@
 
 
   <p><strong>제7조(개인정보의 안전성 확보조치에 관한 사항)</strong></p>
-  <p><em>< Nuy ></em>은(는) 개인정보를 확보를 하지 않습니다.</p><br><br>
+  <p><em>< Nuy ></em>은(는) 개인정보를 확보 하지 않습니다.</p><br><br>
 
 
   <p><strong>제8조(개인정보를 자동으로 수집하는 장치의 설치·운영 및 그 거부에 관한 사항)</strong></p>
