--- a/ko/index.html
+++ b/ko/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nuy</title>
+</head>
+<body>
+  <header>
+    <div>
+      <h2>Nuy</h2>
+    </div>
+  </header><hr>
+  <div>
+    <aside>
+    </aside>
+    <main>
+    </main>
+  </div>
+  <footer>
+  </footer>
+  <script></script>
+</body>
+</html>
