--- a/ko/index.html
+++ b/ko/index.html
@@ -16,6 +16,11 @@
     <aside>
     </aside>
     <main>
+      <a href="https://uegnuy.github.io/ko/app/">앱</a><br>
+      <a href="https://uegnuy.github.io/ko/game/mobile/ff/wotv.txt">게임</a><br>
+      <a href="https://uegnuy.github.io/ko/real-estate/">부동산</a><br>
+      <a href="https://uegnuy.github.io/ko/study/">스터디</a><br>
+      <a href="https://uegnuy.github.io/ko/test/">테스트</a><br>
     </main>
   </div>
   <footer>
