--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -19,10 +19,12 @@
     <aside>
     </aside>
     <main>
-      <img class="nw-100--a" src="image/충북 음성군 생극면 신양리 632-7.png" alt="null">
-      <img class="nw-100--a" src="image/전남 해남 산이면 금호리 산162.png" alt="null">
-      <img class="nw-100--a" src="image/경남 거제시 문동동 15-15.png" alt="null">
-      <img class="nw-100--a" src="image/경북 안동 길안면 명곡길 13-10.png" alt="null">
+      <img class="nw-100--a" src="image/전북특별자치도 김제시 백구면 유강리 85 --0.png" alt="null">
+      <img class="nw-100--a" src="image/전라남도 담양군 월산면 중월리 660(664) --0.png" alt="null">
+      <img class="nw-100--a" src="image/전라남도 여수시 화양면 옥적리 산302 --0.png" alt="null">
+      <img class="nw-100--a" src="image/경상남도 창녕군 대합면 도개리 44-1 --0.png" alt="null">
+      <img class="nw-100--a" src="image/경상북도 문경시 동로면 석항리 1019 --0.png" alt="null">
+      <img class="nw-100--a" src="image/경상북도 안동시 법상동 76-53(69) --0.png" alt="null">
       <img class="nw-100--a" src="image/.png" alt="null">
     </main>
   </div>
