--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -25,6 +25,13 @@
       <img class="nw-32--a" src="image/전북특별자치도 김제시 백구면 유강리 85 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1387123">전북특별자치도 김제시 백구면 유강리 85</a></p>
       <img class="nw-100--a" src="image/전라남도 담양군 월산면 중월리 660(664) --0.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 660 --1.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 660 --2.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 660 --3.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 664 --1.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 660 --2.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 664 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1318349">전라남도 담양군 월산면 중월리 660(664)</a></p>
       <img class="nw-100--a" src="image/전라남도 여수시 화양면 옥적리 산302 --0.png" alt="null">
       <img class="nw-100--a" src="image/경상남도 창녕군 대합면 도개리 44-1 --0.png" alt="null">
       <img class="nw-100--a" src="image/경상북도 안동시 법상동 76-53(69) --0.png" alt="null">
