--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -33,6 +33,10 @@
       <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 664 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1318349">전라남도 담양군 월산면 중월리 660(664)</a></p>
       <img class="nw-100--a" src="image/전라남도 여수시 화양면 옥적리 산302 --0.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 여수시 화양면 옥적리 산302 --1.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 여수시 화양면 옥적리 산302 --2.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 여수시 화양면 옥적리 산302 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1359372">전라남도 여수시 화양면 옥적리 산302</a></p>
       <img class="nw-100--a" src="image/경상남도 창녕군 대합면 도개리 44-1 --0.png" alt="null">
       <img class="nw-100--a" src="image/경상북도 안동시 법상동 76-53(69) --0.png" alt="null">
       <img class="nw-100--a" src="image/경상북도 문경시 동로면 석항리 1019 --0.png" alt="null">
