--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -47,8 +47,12 @@
       <img class="nw-24--a" src="image/경상북도 안동시 법상동 76-53(69) --2.png" alt="null">
       <img class="nw-24--a" src="image/경상북도 안동시 법상동 76-53(69) --3.png" alt="null">
       <img class="nw-24--a" src="image/경상북도 안동시 법상동 76-53(69) --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1390162">경상북도 안동시 법상동 76-53(69)</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1390162">경상북도 안동시 법상동 76-53(+69)</a></p>
       <img class="nw-100--a" src="image/경상북도 문경시 동로면 석항리 1019 --0.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 문경시 동로면 석항리 1019 --0.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 문경시 동로면 석항리 1019 --0.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 문경시 동로면 석항리 1019 --0.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1366803">경상북도 문경시 동로면 석항리 1019</a></p>
       <img class="nw-100--a" src="image/.png" alt="null">
     </main>
   </div>
