--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -18,40 +18,22 @@
     <aside>
     </aside>
     <main>
-      <img class="nw-100--a" src="image/전북특별자치도 김제시 백구면 유강리 85 --0.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 김제시 백구면 유강리 85 --1.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 김제시 백구면 유강리 85 --2.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 김제시 백구면 유강리 85 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1387123">전북특별자치도 김제시 백구면 유강리 85</a></p>
-      <img class="nw-100--a" src="image/전라남도 담양군 월산면 중월리 660(664) --0.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 660 --1.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 660 --2.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 660 --3.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 664 --1.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 660 --2.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 담양군 월산면 중월리 664 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1318349">전라남도 담양군 월산면 중월리 660 (또는 664)</a></p>
-      <img class="nw-100--a" src="image/전라남도 여수시 화양면 옥적리 산302 --0.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 여수시 화양면 옥적리 산302 --1.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 여수시 화양면 옥적리 산302 --2.png" alt="null">
-      <img class="nw-32--a" src="image/전라남도 여수시 화양면 옥적리 산302 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1359372">전라남도 여수시 화양면 옥적리 산302</a></p>
-      <img class="nw-100--a" src="image/경상남도 창녕군 대합면 도개리 44-1 --0.png" alt="null">
-      <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 44-1 --1.png" alt="null">
-      <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 44-1 --2.png" alt="null">
-      <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 44-1 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1375721">경상남도 창녕군 대합면 도개리 44-1</a></p>
-      <img class="nw-100--a" src="image/경상북도 안동시 법상동 76-53(69) --0.png" alt="null">
-      <img class="nw-24--a" src="image/경상북도 안동시 법상동 76-53(69) --1.png" alt="null">
-      <img class="nw-24--a" src="image/경상북도 안동시 법상동 76-53(69) --2.png" alt="null">
-      <img class="nw-24--a" src="image/경상북도 안동시 법상동 76-53(69) --3.png" alt="null">
-      <img class="nw-24--a" src="image/경상북도 안동시 법상동 76-53(69) --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1390162">경상북도 안동시 법상동 76-53(+69)</a></p>
-      <img class="nw-100--a" src="image/경상북도 문경시 동로면 석항리 1019 --0.png" alt="null">
-      <img class="nw-32--a" src="image/경상북도 문경시 동로면 석항리 1019 --1.png" alt="null">
-      <img class="nw-32--a" src="image/경상북도 문경시 동로면 석항리 1019 --2.png" alt="null">
-      <img class="nw-32--a" src="image/경상북도 문경시 동로면 석항리 1019 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1366803">경상북도 문경시 동로면 석항리 1019</a></p>
+      <img class="nw-100--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --0.png" alt="null">
+      <img class="nw-32--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --1.png" alt="null">
+      <img class="nw-32--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --2.png" alt="null">
+      <img class="nw-32--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1341224"></a>충청남도 당진시 석문면 삼봉리 474-12</p>
+      <img class="nw-100--a" src="image/ --0.png" alt="null">
+      <img class="nw-32--a" src="image/ --1.png" alt="null">
+      <img class="nw-32--a" src="image/ --2.png" alt="null">
+      <img class="nw-32--a" src="image/ --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/-------"></a></p>
+      <img class="nw-100--a" src="image/ --0.png" alt="null">
+      <img class="nw-24--a" src="image/ --1.png" alt="null">
+      <img class="nw-24--a" src="image/ --2.png" alt="null">
+      <img class="nw-24--a" src="image/ --3.png" alt="null">
+      <img class="nw-24--a" src="image/ --4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/-------"></a></p>
       <p></p>
       <img class="nw-100--a" src="image/.png" alt="null">
     </main>
