--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -23,7 +23,7 @@
       <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --2.png" alt="null">
       <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --3.png" alt="null">
       <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1341224"></a>충청남도 당진시 석문면 삼봉리 474-12</p>
+      <p><a href="https://www.my-auction.co.kr/view/1341224">충청남도 당진시 석문면 삼봉리 474-12</a></p>
       <img class="nw-100--a" src="image/ --0.png" alt="null">
       <img class="nw-32--a" src="image/ --1.png" alt="null">
       <img class="nw-32--a" src="image/ --2.png" alt="null">
