--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -24,6 +24,11 @@
       <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --3.png" alt="null">
       <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1341224">충청남도 당진시 석문면 삼봉리 474-12</a></p>
+      <img class="nw-100--a" src="image/경상남도 의령군 대의면 추산리 315 --0.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 의령군 대의면 추산리 315 --1.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 의령군 대의면 추산리 315 --2.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 의령군 대의면 추산리 315 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1365434">경상남도 의령군 대의면 추산리 315</a></p>
       <img class="nw-100--a" src="image/경상남도 의령군 용덕면 가미리 산46 --0.png" alt="null">
       <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --1.png" alt="null">
       <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --2.png" alt="null">
