--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -35,6 +35,11 @@
       <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --3.png" alt="null">
       <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1335560">경상남도 의령군 용덕면 가미리 산46</a></p>
+      <img class="nw-100--a" src="image/경상남도 함안군 군북면 수곡리 289 --0.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --1.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --2.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1365437">경상남도 함안군 군북면 수곡리 289</a></p>
       <img class="nw-100--a" src="image/ --0.png" alt="null">
       <img class="nw-32--a" src="image/ --1.png" alt="null">
       <img class="nw-32--a" src="image/ --2.png" alt="null">
