--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -45,6 +45,11 @@
       <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1365437">경상남도 함안군 군북면 수곡리 289</a></p>
+      <img class="nw-100--a" src="image/경상북도 성주군 수륜면 수륜리 853 --0.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --1.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --2.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1392236">경상북도 성주군 수륜면 수륜리 853</a></p>
       <img class="nw-100--a" src="image/ --0.png" alt="null">
       <img class="nw-32--a" src="image/ --1.png" alt="null">
       <img class="nw-32--a" src="image/ --2.png" alt="null">
