--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -50,6 +50,12 @@
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1392236">경상북도 성주군 수륜면 수륜리 853</a></p>
+      <img class="nw-100--a" src="image/경상북도 의성군 금성면 청로리 산55 --0.png" alt="null">
+      <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --1.png" alt="null">
+      <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --2.png" alt="null">
+      <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --3.png" alt="null">
+      <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1379543">경상북도 의성군 금성면 청로리 산55</a></p>
       <img class="nw-100--a" src="image/ --0.png" alt="null">
       <img class="nw-32--a" src="image/ --1.png" alt="null">
       <img class="nw-32--a" src="image/ --2.png" alt="null">
