--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -29,6 +29,12 @@
       <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --2.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1333685">전북특별자치도 완주군 화산면 종리 산57</a></p>
+      <img class="nw-100--a" src="image/전라남도 여수시 화양면 옥적리 산302 --0.png" alt="null">
+      <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --1.png" alt="null">
+      <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --2.png" alt="null">
+      <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --3.png" alt="null">
+      <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1359372">전라남도 여수시 화양면 옥적리 산302</a></p>
       <img class="nw-100--a" src="image/경상남도 함안군 군북면 수곡리 289 --0.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --1.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --2.png" alt="null">
