--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -57,6 +57,11 @@
       <img class="nw-32--a" src="image/경상남도 의령군 대의면 추산리 315 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 의령군 대의면 추산리 315 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1365434">경상남도 의령군 대의면 추산리 315</a></p>
+      <img class="nw-100--a" src="image/경상남도 창녕군 대합면 도개리 1178 --0.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 1178 --1.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 1178 --2.png" alt="null">
+      <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 1178 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1375723">경상남도 창녕군 대합면 도개리 1178</a></p>
       <img class="nw-100--a" src="image/경상북도 성주군 수륜면 수륜리 853 --0.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --1.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --2.png" alt="null">
