--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -29,6 +29,11 @@
       <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --2.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1333685">전북특별자치도 완주군 화산면 종리 산57</a></p>
+      <img class="nw-100--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --0.png" alt="null">
+      <img class="nw-32--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --1.png" alt="null">
+      <img class="nw-32--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --2.png" alt="null">
+      <img class="nw-32--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1390240">전북특별자치도 김제시 금산면 선동리 산53</a></p>
       <img class="nw-100--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --0.png" alt="null">
       <img class="nw-24--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --1.png" alt="null">
       <img class="nw-24--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --2.png" alt="null">
