--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -34,6 +34,11 @@
       <img class="nw-32--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --2.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1390240">전북특별자치도 김제시 금산면 선동리 산53</a></p>
+      <img class="nw-100--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --0.png" alt="null">
+      <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --1.png" alt="null">
+      <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --2.png" alt="null">
+      <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1377739">전북특별자치도 부안군 하서면 장신리 68-1</a></p>
       <img class="nw-100--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --0.png" alt="null">
       <img class="nw-24--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --1.png" alt="null">
       <img class="nw-24--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --2.png" alt="null">
