--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -89,6 +89,11 @@
       <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --3.png" alt="null">
       <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1379543">경상북도 의성군 금성면 청로리 산55</a></p>
+      <img class="nw-100--a" src="image/강원특별자치도 평창군 대화면 대화리 632 --0.png" alt="null">
+      <img class="nw-32--a" src="image/강원특별자치도 평창군 대화면 대화리 632 --1.png" alt="null">
+      <img class="nw-32--a" src="image/강원특별자치도 평창군 대화면 대화리 632 --2.png" alt="null">
+      <img class="nw-32--a" src="image/강원특별자치도 평창군 대화면 대화리 632 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1364446">강원특별자치도 평창군 대화면 대화리 632</a></p>
       <img class="nw-100--a" src="image/강원특별자치도 횡성군 안흥면 성산리 853-2 --0.png" alt="null">
       <img class="nw-32--a" src="image/강원특별자치도 횡성군 안흥면 성산리 853-2 --1.png" alt="null">
       <img class="nw-32--a" src="image/강원특별자치도 횡성군 안흥면 성산리 853-2 --2.png" alt="null">
