--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -51,6 +51,11 @@
       <img class="nw-24--a" src="image/전라남도 구례군 산동면 계천리 산67 --3.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 구례군 산동면 계천리 산67 --4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1370315">전라남도 구례군 산동면 계천리 산67</a></p>
+      <img class="nw-100--a" src="image/전라남도 순천시 월등면 대평리 491-3 --0.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 순천시 월등면 대평리 491-3 --1.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 순천시 월등면 대평리 491-3 --2.png" alt="null">
+      <img class="nw-32--a" src="image/전라남도 순천시 월등면 대평리 491-3 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1353740">전라남도 순천시 월등면 대평리 491-3</a></p>
       <img class="nw-100--a" src="image/전라남도 여수시 화양면 옥적리 산302 --0.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --1.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --2.png" alt="null">
